# nes-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/common/: types.hpp  utils.hpp
include/nes/: bus.hpp  cpu.hpp  instructions.hpp  memory.hpp  rom.hpp  system.hpp
include/nes/cpu/: cpu.hpp  opcodes.hpp
source/: main.cpp
source/nes/: bus.cpp  cpu.cpp  memory.cpp  rom.cpp  system.cpp
